; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_3434.c_mac_aton.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_3434.c_mac_aton.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ETH_ALEN = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mac_aton(i8* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8, align 1
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 0, i32* %7, align 4
  br label %9

9:                                                ; preds = %151, %2
  %10 = load i8*, i8** %4, align 8
  %11 = load i8, i8* %10, align 1
  %12 = sext i8 %11 to i32
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %18

14:                                               ; preds = %9
  %15 = load i32, i32* %7, align 4
  %16 = load i32, i32* @ETH_ALEN, align 4
  %17 = icmp slt i32 %15, %16
  br label %18

18:                                               ; preds = %14, %9
  %19 = phi i1 [ false, %9 ], [ %17, %14 ]
  br i1 %19, label %20, label %152

20:                                               ; preds = %18
  store i32 0, i32* %8, align 4
  %21 = load i8*, i8** %4, align 8
  %22 = getelementptr inbounds i8, i8* %21, i32 1
  store i8* %22, i8** %4, align 8
  %23 = load i8, i8* %21, align 1
  store i8 %23, i8* %6, align 1
  %24 = load i8, i8* %6, align 1
  %25 = sext i8 %24 to i32
  %26 = icmp sge i32 %25, 48
  br i1 %26, label %27, label %35

27:                                               ; preds = %20
  %28 = load i8, i8* %6, align 1
  %29 = sext i8 %28 to i32
  %30 = icmp sle i32 %29, 57
  br i1 %30, label %31, label %35

31:                                               ; preds = %27
  %32 = load i8, i8* %6, align 1
  %33 = sext i8 %32 to i32
  %34 = sub nsw i32 %33, 48
  store i32 %34, i32* %8, align 4
  br label %65

35:                                               ; preds = %27, %20
  %36 = load i8, i8* %6, align 1
  %37 = sext i8 %36 to i32
  %38 = icmp sge i32 %37, 97
  br i1 %38, label %39, label %48

39:                                               ; preds = %35
  %40 = load i8, i8* %6, align 1
  %41 = sext i8 %40 to i32
  %42 = icmp sle i32 %41, 102
  br i1 %42, label %43, label %48

43:                                               ; preds = %39
  %44 = load i8, i8* %6, align 1
  %45 = sext i8 %44 to i32
  %46 = sub nsw i32 %45, 97
  %47 = add nsw i32 %46, 10
  store i32 %47, i32* %8, align 4
  br label %64

48:                                               ; preds = %39, %35
  %49 = load i8, i8* %6, align 1
  %50 = sext i8 %49 to i32
  %51 = icmp sge i32 %50, 65
  br i1 %51, label %52, label %61

52:                                               ; preds = %48
  %53 = load i8, i8* %6, align 1
  %54 = sext i8 %53 to i32
  %55 = icmp sle i32 %54, 70
  br i1 %55, label %56, label %61

56:                                               ; preds = %52
  %57 = load i8, i8* %6, align 1
  %58 = sext i8 %57 to i32
  %59 = sub nsw i32 %58, 65
  %60 = add nsw i32 %59, 10
  store i32 %60, i32* %8, align 4
  br label %63

61:                                               ; preds = %52, %48
  %62 = load i32, i32* @EINVAL, align 4
  store i32 %62, i32* @errno, align 4
  store i32 -1, i32* %3, align 4
  br label %153

63:                                               ; preds = %56
  br label %64

64:                                               ; preds = %63, %43
  br label %65

65:                                               ; preds = %64, %31
  %66 = load i32, i32* %8, align 4
  %67 = shl i32 %66, 4
  store i32 %67, i32* %8, align 4
  %68 = load i8*, i8** %4, align 8
  %69 = load i8, i8* %68, align 1
  store i8 %69, i8* %6, align 1
  %70 = load i8, i8* %6, align 1
  %71 = sext i8 %70 to i32
  %72 = icmp sge i32 %71, 48
  br i1 %72, label %73, label %83

73:                                               ; preds = %65
  %74 = load i8, i8* %6, align 1
  %75 = sext i8 %74 to i32
  %76 = icmp sle i32 %75, 57
  br i1 %76, label %77, label %83

77:                                               ; preds = %73
  %78 = load i8, i8* %6, align 1
  %79 = sext i8 %78 to i32
  %80 = sub nsw i32 %79, 48
  %81 = load i32, i32* %8, align 4
  %82 = or i32 %81, %80
  store i32 %82, i32* %8, align 4
  br label %129

83:                                               ; preds = %73, %65
  %84 = load i8, i8* %6, align 1
  %85 = sext i8 %84 to i32
  %86 = icmp sge i32 %85, 97
  br i1 %86, label %87, label %98

87:                                               ; preds = %83
  %88 = load i8, i8* %6, align 1
  %89 = sext i8 %88 to i32
  %90 = icmp sle i32 %89, 102
  br i1 %90, label %91, label %98

91:                                               ; preds = %87
  %92 = load i8, i8* %6, align 1
  %93 = sext i8 %92 to i32
  %94 = sub nsw i32 %93, 97
  %95 = add nsw i32 %94, 10
  %96 = load i32, i32* %8, align 4
  %97 = or i32 %96, %95
  store i32 %97, i32* %8, align 4
  br label %128

98:                                               ; preds = %87, %83
  %99 = load i8, i8* %6, align 1
  %100 = sext i8 %99 to i32
  %101 = icmp sge i32 %100, 65
  br i1 %101, label %102, label %113

102:                                              ; preds = %98
  %103 = load i8, i8* %6, align 1
  %104 = sext i8 %103 to i32
  %105 = icmp sle i32 %104, 70
  br i1 %105, label %106, label %113

106:                                              ; preds = %102
  %107 = load i8, i8* %6, align 1
  %108 = sext i8 %107 to i32
  %109 = sub nsw i32 %108, 65
  %110 = add nsw i32 %109, 10
  %111 = load i32, i32* %8, align 4
  %112 = or i32 %111, %110
  store i32 %112, i32* %8, align 4
  br label %127

113:                                              ; preds = %102, %98
  %114 = load i8, i8* %6, align 1
  %115 = sext i8 %114 to i32
  %116 = icmp eq i32 %115, 58
  br i1 %116, label %121, label %117

117:                                              ; preds = %113
  %118 = load i8, i8* %6, align 1
  %119 = sext i8 %118 to i32
  %120 = icmp eq i32 %119, 0
  br i1 %120, label %121, label %124

121:                                              ; preds = %117, %113
  %122 = load i32, i32* %8, align 4
  %123 = lshr i32 %122, 4
  store i32 %123, i32* %8, align 4
  br label %126

124:                                              ; preds = %117
  %125 = load i32, i32* @EINVAL, align 4
  store i32 %125, i32* @errno, align 4
  store i32 -1, i32* %3, align 4
  br label %153

126:                                              ; preds = %121
  br label %127

127:                                              ; preds = %126, %106
  br label %128

128:                                              ; preds = %127, %91
  br label %129

129:                                              ; preds = %128, %77
  %130 = load i8, i8* %6, align 1
  %131 = sext i8 %130 to i32
  %132 = icmp ne i32 %131, 0
  br i1 %132, label %133, label %136

133:                                              ; preds = %129
  %134 = load i8*, i8** %4, align 8
  %135 = getelementptr inbounds i8, i8* %134, i32 1
  store i8* %135, i8** %4, align 8
  br label %136

136:                                              ; preds = %133, %129
  %137 = load i32, i32* %8, align 4
  %138 = and i32 %137, 255
  %139 = trunc i32 %138 to i8
  %140 = load i8*, i8** %5, align 8
  %141 = getelementptr inbounds i8, i8* %140, i32 1
  store i8* %141, i8** %5, align 8
  store i8 %139, i8* %140, align 1
  %142 = load i32, i32* %7, align 4
  %143 = add nsw i32 %142, 1
  store i32 %143, i32* %7, align 4
  %144 = load i8*, i8** %4, align 8
  %145 = load i8, i8* %144, align 1
  %146 = sext i8 %145 to i32
  %147 = icmp eq i32 %146, 58
  br i1 %147, label %148, label %151

148:                                              ; preds = %136
  %149 = load i8*, i8** %4, align 8
  %150 = getelementptr inbounds i8, i8* %149, i32 1
  store i8* %150, i8** %4, align 8
  br label %151

151:                                              ; preds = %148, %136
  br label %9

152:                                              ; preds = %18
  store i32 0, i32* %3, align 4
  br label %153

153:                                              ; preds = %152, %124, %61
  %154 = load i32, i32* %3, align 4
  ret i32 %154
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
